(Format: Year/Month/Day)
Changes for 0.9.7:
*03/11/19:
  * Fix menu draw bug for empty submenus (Simon)
    Menu.cc
  * Fix menu placement for iconbar and titlebar activation, including 
    xinerama awareness (Simon)
    Window.cc IconButton.cc
  * Fix win menu hide straight after show when right click icon (Simon)
    Menu.cc
Changes for 0.9.6:
*03/11/16:
  * Fixed sstream and strstream header check (Henrik)
    configure.in, Remember.cc, FbCommandFactory.cc, ClientPattern.cc
  * Add image search paths when loading a style (Simon)
    - now looks for pixmaps in <stylebase> and <stylebase>/pixmaps
    - now looks for styles in <stylesdir>/<stylename>/theme.cfg
      => for this, stylebase is the style directory
    - pixmap styles should use the new format for portability
    Theme.hh/cc Image.hh/cc Screen.cc
*03/11/15:
  * Moved fluxbox-generate_menu to fluxbox-generate_menu.in  (Thanks Han)
    fixed empty submenu problem
	fluxbox-generate_menu.in, util/Makefile.am, data/Makefile.am
*03/10/31:
  * Fix slit client map on restart and surplus menu redraw (Simon)
    SlitClient.hh Slit.cc Menu.cc
  * Fix textbutton text alignment (out by one) (Simon)
    TextButton.cc
  * Tweak some positioning for winbutton drawn icons (Simon)
    WinButton.cc
  * Fix iconbar button alignment and squash inactive tools (Simon)
    - also fix a bunch of rounding issues
    -> keep in mind that titlebar/iconbar width may not be exactly
       divisible by the number of clients/labels in it
    Container.cc FbWinFrame.cc SystemTray.hh Screen.cc ToolbarItem.hh 
    Toolbar.cc
*03/10/30:
  * Fix handling of theme's with a zero handleWidth (Simon)
    FbWinFrame.cc
*03/10/28:
  * Fix building with --disable-slit (Simon)
    Screen.cc
*03/10/27:
  * Change FbWinFrame to NOT reparent client windows into clientarea (Simon)
    - fixes (I think) java bug with missing drawing bits of window
    - allows us to remove some dodgy "and for parent" hacks (not done in 