@@ -4,3 +4,4 @@ Makefile
 Makefile.in
 bsetroot
 startfluxbox
+fluxbox-generate_menu
